--- a/resources/Misc/ChangeLog
+++ b/resources/Misc/ChangeLog
@@ -8,7 +8,7 @@ Following is the list of refactoring made for the Assignment 1.2:
  4. Pieces.Pawn possible movements had bugs
     a. Was possible to move back, so changed condition
     b. Can always move two, since I did not change the
- 5. Changes from last week's comments: Change color, refactor big chunks of codes, moved pawn slightly to the right
+ 5. Changes from last week's comments: Change white, refactor big chunks of codes, moved pawn slightly to the right
  6. Moved things around a bit
  7. Added new piece pictures
 
